Polishing.
See #4404